--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
     <footer class="footer">
       <p class="footer__content-copyright">&copy; 2022 Mesto Russia</p>
     </footer>
+    <script src="./components/cards.js"></script>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
