--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
         <button class="profile__button-add" type="button"></button>
       </section>
 
-      <section class="cards">
-        
-      </section>
+      <section class="cards"></section>
 
       <div class="popup popup__edit">
         <div class="popup__container">
@@ -86,12 +84,42 @@
           </form>
         </div>
       </div>
+
+      <div class="popup popup__image">
+        <div class="popup__image-container">
+          <button class="popup__close" type="button"></button>
+          <img class="popup__image-fullsize" src="" />
+          <h2 class="popup__image-title"></h2>
+        </div>
+      </div>
     </main>
 
     <footer class="footer">
       <p class="footer__content-copyright">&copy; 2022 Mesto Russia</p>
     </footer>
-    <script src="./components/cards.js"></script>
-    <script src="./scripts/index.js"></script>
+    
+    <template id="card__template">
+      <div class="card">
+        <img class="card__image" />
+        <button
+          class="card__delete"
+          type="button"
+          arial-label="Удалить место"
+          name="card__delete"
+          id="card__delete"
+        ></button>
+        <div class="card__description">
+          <h2 class="card__title"></h2>
+          <button
+            class="card__like"
+            type="button"
+            arial-label="Нравится"
+            namde="card__like"
+            id="card__like"
+          ></button>
+        </div>
+      </div>
+    </template>
+    <script src="./scripts/index.js" defer></script>
   </body>
 </html>
